modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/parser/errors/export_tool_button_requires_tool_mode.gd
@export_tool_button("Click me!") var action
